infrastructure/oauth2-proxy/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oauth2-proxy
  namespace: "${infranamespaceprefix}oauth2-proxy"
spec:
  hosts:
  - auth.pauwelslabs.com
  gateways:
  - istio-ingress/pauwels-labs
  http:
  - name: "oauth2-proxy"
    route:
    - destination:
        port:
          number: 80
        host: oauth2-proxy
